@@ -10,7 +10,7 @@ import java.util.*;
 
 public class UnmodifiableBean<T> extends AbstractBean<T> {
 
-	private static final UnmodifiableBean<Object> EMPTY = new UnmodifiableBean<>(new HashMap<>(), new ArrayList<>(), TypeIdentifier.of(Object.class), null);
+	private static final UnmodifiableBean<Object> EMPTY = new UnmodifiableBean<>(Collections.emptyMap(), Collections.emptyMap(), Collections.emptySet(), TypeIdentifier.OBJECT, null);
 
 	public static <T> UnmodifiableBean<T> empty() {
 		return (UnmodifiableBean<T>) EMPTY;
@@ -18,16 +18,12 @@ public class UnmodifiableBean<T> extends AbstractBean<T> {
 
 	public UnmodifiableBean(
 			@NotNull Map<QualifierType, IdentifiableProvider<T>> qualifiedProviders,
-			@NotNull List<IdentifiableProvider<T>> unqualifiedProviders,
-			@NotNull TypeIdentifier<T> typeIdentifier,
+			@NotNull Map<TypeIdentifier<T>, TypedProviderState<T>> typedProviders,
+			@NotNull Set<IdentifiableProvider<T>> unqualifiedProviders,
+			@NotNull TypeIdentifier<T> rootType,
 			@Nullable IdentifiableProvider<T> primary
 	) {
-		super(Collections.unmodifiableMap(qualifiedProviders), Collections.unmodifiableList(unqualifiedProviders), typeIdentifier);
+		super(Map.copyOf(qualifiedProviders), Map.copyOf(typedProviders), Set.copyOf(unqualifiedProviders), rootType);
 		this.primary = primary;
-	}
-
-	@Override
-	public void put(IdentifiableProvider<T> identifiableProvider) {
-		throw new UnsupportedOperationException("put(IdentifiableProvider<T>)");
 	}
 }
